force-app/main/default/objects/ZD_B3_Product_Purchase_History__c/ZD_B3_Product_Purchase_History__c.object-meta.xml
<CustomObject>
    <label>ZD-B3 Product Purchase History</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ZD-B3 Product Purchase Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>