force-app/main/default/objects/ZD_B3_Product_Purchase_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>ZD-B3 Product Purchase Histories</relationshipLabel>
    <relationshipName>ZD_B3_Product_Purchase_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>