force-app/main/default/objects/ZD_B3_Product_Purchase_History__c/fields/B3_Special_FPY__c.field-meta.xml
<CustomField>
    <fullName>B3_Special_FPY__c</fullName>
    <label>B3 Special FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>