force-app/main/default/objects/ZD_B3_Product_Purchase_History__c/fields/Last_Year_Sales__c.field-meta.xml
<CustomField>
    <fullName>Last_Year_Sales__c</fullName>
    <formula>ZD_Total_Sales_FPY__c +  B3_Total_Sales_FPY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Last Year Sales</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>