force-app/main/default/objects/ZD_B3_Product_Purchase_History__c/fields/Total_PYTD__c.field-meta.xml
<CustomField>
    <fullName>Total_PYTD__c</fullName>
    <formula>ZD_Total_Sales_PYTD__c +  B3_Total_Sales_PYTD__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total PYTD</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>