force-app/main/default/objects/ZD_B3_Product_Purchase_History__c/fields/ZD_Regen_FPY__c.field-meta.xml
<CustomField>
    <fullName>ZD_Regen_FPY__c</fullName>
    <defaultValue>0</defaultValue>
    <label>ZD Regen FPY</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>