force-app/main/default/objects/ZD_B3_Product_Purchase_History__c/fields/ZD_Total_Sales_PYTD__c.field-meta.xml
<CustomField>
    <fullName>ZD_Total_Sales_PYTD__c</fullName>
    <label>ZD Total Sales PYTD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>